--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ set(LIBRARY_NAME tttable)  # Default name for the library built from src/*.cpp
 # --------------------------------------------------------------------------------
 #                            Build!
 # --------------------------------------------------------------------------------
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
