--- a/include/configurations.h.in
+++ b/include/configurations.h.in
@@ -1,7 +1,7 @@
 /*
  * This file contains definitions made in CMakeLists.txt
  * that we want available in the source code.
- * In the source code, include "exampleConfig.h" (no .in suffix).
+ * In the source code, include "configurations.h" (no .in suffix).
  * This header file will be generated, and filled with the
  * right definition values. Change the namings as you wish,
  * but make sure they match up with whats in CMakeLists.txt.
