--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 
-# List all files containing tests. (Change as needed)
-set(TESTFILES        # All .cpp files in tests/
-    main.cpp
-    dummy.cpp
-)
+# List all sources as files containing tests.
+file(GLOB TESTFILES *.cpp)
 
-set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
+set(TEST_MAIN test_suite)   # Default name for test executable (change if you wish).
 set(TEST_RUNNER_PARAMS "")  # Any arguemnts to feed the test runner (change as needed).
 
 # --------------------------------------------------------------------------------
