Extend style checks

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -10,7 +10,9 @@ jobs:
       matrix:
         path:
           - 'include'
-          - 'test'
+          - 'tests'
+          - 'src'
+          - 'app'
 
     steps:
     - uses: actions/checkout@v3
