--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
           - windows-msvc
 
         configuration:
-          - Debug
           - Release
 
         include:
@@ -39,13 +38,13 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Configure (${{ matrix.configuration }})
-      run: cmake -S . -B build_${{ matrix.configuration }} -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
+      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
 
     - name: Build with ${{ matrix.compiler }}
-      run: cmake --build build_${{ matrix.configuration }}
+      run: cmake --build build
 
     - name: Test
-      working-directory: build_${{ matrix.configuration }}
+      working-directory: build
       env:
         CTEST_OUTPUT_ON_FAILURE: 1
       run: ctest -C ${{ matrix.configuration }}
